fix logo and navbar register button

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,8 +14,8 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="../assets/images/mypfe-logo.png" alt="MyPFE 14.0" class="logo">
-                <span class="logo-text">MyPFE 14.0</span>
+                <img src="../assets/images/Vector (1).png" alt="MyPFE 14.0" class="logo">
+                <!-- <span class="logo-text">MyPFE 14.0</span> -->
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="../index.html" class="nav-link">Home</a>
@@ -23,7 +23,7 @@
                 <a href="program.html" class="nav-link">Program</a>
                 <a href="sponsors.html" class="nav-link">Partners</a>
                 <a href="contact.html" class="nav-link active">Contact</a>
-                <a href="#register" class="nav-link btn-primary">Register Now</a>
+                <a href="#register" class="nav-link btn-primary btn">Register Now</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
@@ -47,6 +47,8 @@
             </div>
         </div>
     </section>
+
+    
 
     <!-- Registration Section -->
     <section class="registration-section" id="register">
