trochiket before packages grid

--- a/pages/about.html
+++ b/pages/about.html
@@ -39,11 +39,7 @@
             <div class="header-content">
                 <h1>About MyPFE 14.0</h1>
                 <p>Discover the story behind Tunisia's leading job fair and career development event</p>
-                <nav class="breadcrumb">
-                    <a href="../index.html">Home</a>
-                    <span>/</span>
-                    <span>About</span>
-                </nav>
+                <!-- breadcrumb removed -->
             </div>
         </div>
     </section>
@@ -88,7 +84,7 @@
                             <i class="fas fa-users"></i>
                         </div>
                         <div class="stat-info">
-                            <div class="stat-number">3500+</div>
+                            <div class="stat-number">350+</div>
                             <div class="stat-label">Students</div>
                         </div>
                     </div>
@@ -97,7 +93,7 @@
                             <i class="fas fa-building"></i>
                         </div>
                         <div class="stat-info">
-                            <div class="stat-number">50+</div>
+                            <div class="stat-number">20+</div>
                             <div class="stat-label">Companies</div>
                         </div>
                     </div>
@@ -106,7 +102,7 @@
                             <i class="fas fa-chalkboard-teacher"></i>
                         </div>
                         <div class="stat-info">
-                            <div class="stat-number">20+</div>
+                            <div class="stat-number">5+</div>
                             <div class="stat-label">Workshops</div>
                         </div>
                     </div>
@@ -139,7 +135,7 @@
                             </p>
                             <div class="organizer-stats">
                                 <div class="mini-stat">
-                                    <span class="number">3500+</span>
+                                    <span class="number">350+</span>
                                     <span class="label">Students</span>
                                 </div>
                                 <div class="mini-stat">
