--- a/pages/contact.html
+++ b/pages/contact.html
@@ -39,11 +39,7 @@
             <div class="header-content">
                 <h1>Contact & Registration</h1>
                 <p>Get in touch with us and secure your spot at MyPFE 14.0</p>
-                <nav class="breadcrumb">
-                    <a href="../index.html">Home</a>
-                    <span>/</span>
-                    <span>Contact</span>
-                </nav>
+                <!-- breadcrumb removed -->
             </div>
         </div>
     </section>
