--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partnership Packages - MyPFE 14.0</title>
-    <meta name="description" content="Become a partner of MyPFE 14.0. Choose from Bronze, Silver, Gold, or Diamond partnership packages and connect with 3500+ students.">
+    <meta name="description" content="Become a partner of MyPFE 14.0. Choose from Bronze, Silver, Gold, or Diamond partnership packages and connect with 350+ students.">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -39,11 +39,7 @@
             <div class="header-content">
                 <h1>Partnership Packages</h1>
                 <p>Join MyPFE 14.0 and connect with Tunisia's brightest tech talent</p>
-                <nav class="breadcrumb">
-                    <a href="../index.html">Home</a>
-                    <span>/</span>
-                    <span>Partners</span>
-                </nav>
+                <!-- breadcrumb removed -->
             </div>
         </div>
     </section>
@@ -55,7 +51,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Why Partner with MyPFE 14.0?</h2>
-                <p>Connect with over 3500 talented students and shape the future of technology in Tunisia</p>
+                <p>Connect with over 350 talented students and shape the future of technology in Tunisia</p>
             </div>
             <div class="benefits-grid">
                 <div class="benefit-card">
@@ -63,7 +59,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <h4>Access Top Talent</h4>
-                    <p>Connect with 3500+ computer science and engineering students ready to join your team</p>
+                    <p>Connect with 350+ computer science and engineering students ready to join your team</p>
                 </div>
                 <div class="benefit-card">
                     <div class="benefit-icon">
@@ -265,45 +261,7 @@
         </div>
     </section>
 
-    <!-- MyPFE Expo -->
-    <section class="mypfe-expo">
-        <div class="container">
-            <div class="section-header">
-                <h2>MyPFE Expo</h2>
-                <p>A unique opportunity for employers and recruiters to meet students and recent graduates</p>
-            </div>
-            <div class="expo-content">
-                <div class="expo-description">
-                    <p>
-                        This is an ideal opportunity for employers and recruiters to meet students as well as 
-                        recent graduates, and to establish contacts. The idea is to allow job seekers to meet 
-                        several organizations during a single event, saving them a lot of valuable time.
-                    </p>
-                    <p>
-                        The committee is responsible for preparing the booth and ensuring all logistics are 
-                        handled professionally.
-                    </p>
-                </div>
-                <div class="expo-features">
-                    <div class="expo-feature">
-                        <i class="fas fa-users"></i>
-                        <h4>Direct Student Access</h4>
-                        <p>Meet and interact with over 3500 computer science and engineering students</p>
-                    </div>
-                    <div class="expo-feature">
-                        <i class="fas fa-file-alt"></i>
-                        <h4>CV Collection</h4>
-                        <p>Receive CVs from qualified candidates interested in your opportunities</p>
-                    </div>
-                    <div class="expo-feature">
-                        <i class="fas fa-comments"></i>
-                        <h4>Live Presentations</h4>
-                        <p>Present your company and opportunities directly to interested students</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- MyPFE Expo removed -->
 
     <!-- Former Partners -->
     <section class="former-partners">
