--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -96,24 +96,7 @@
                 <p>Join leading companies that have partnered with MyPFE</p>
             </div>
             <div class="partners-grid">
-                <div class="partner-logo">
-                    <img src="../assets/images/partners/partner1.png" alt="Partner 1">
-                </div>
-                <div class="partner-logo">
-                    <img src="../assets/images/partners/partner2.png" alt="Partner 2">
-                </div>
-                <div class="partner-logo">
-                    <img src="../assets/images/partners/partner3.png" alt="Partner 3">
-                </div>
-                <div class="partner-logo">
-                    <img src="../assets/images/partners/partner4.png" alt="Partner 4">
-                </div>
-                <div class="partner-logo">
-                    <img src="../assets/images/partners/partner5.png" alt="Partner 5">
-                </div>
-                <div class="partner-logo">
-                    <img src="../assets/images/partners/partner6.png" alt="Partner 6">
-                </div>
+                <!-- Partners will be loaded from JSON -->
             </div>
         </div>
     </section>
@@ -184,6 +167,14 @@
                     <div class="contact-item">
                         <i class="fas fa-user"></i>
                         <div>
+                            <h4>Habib M. Kammoun</h4>
+                            <p>Department Head</p>
+                            <p>habib.kammoun@ieee.org</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-user"></i>
+                        <div>
                             <h4>Med Yassine Abid</h4>
                             <p>Event Chair</p>
                             <p>abid.mohamed.yassine@ieee.org</p>
@@ -199,14 +190,7 @@
                             <p>+216 99 332 442</p>
                         </div>
                     </div>
-                    <div class="contact-item">
-                        <i class="fas fa-user"></i>
-                        <div>
-                            <h4>Habib M. Kammoun</h4>
-                            <p>Department Head</p>
-                            <p>habib.kammoun@ieee.org</p>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="contact-form">
                     <form class="partnership-form">
