--- a/pages/program.html
+++ b/pages/program.html
@@ -82,194 +82,9 @@
                 <p>Your complete guide to MyPFE 14.0 activities and sessions</p>
             </div>
             
-            <div class="schedule-timeline">
-                <div class="schedule-item">
-                    <div class="schedule-time">
-                        <span class="time">8:00 - 9:00</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Registration and Setup</h3>
-                        <p>Welcome attendees, distribute welcome packs, and set up exhibition booths</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-map-marker-alt"></i> Main Entrance Hall</span>
-                            <span class="detail-item"><i class="fas fa-gift"></i> Welcome Packs Distribution</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item featured">
-                    <div class="schedule-time">
-                        <span class="time">9:00 - 9:45</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Opening Ceremony</h3>
-                        <p>Official welcome, keynote speeches from organizers, and introduction to the event program</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-microphone"></i> Main Auditorium</span>
-                            <span class="detail-item"><i class="fas fa-star"></i> Featured Speakers</span>
-                            <span class="detail-item"><i class="fas fa-handshake"></i> Partner Recognition</span>
-                        </div>
-                        <div class="speakers">
-                            <h4>Speakers:</h4>
-                            <ul>
-                                <li>Habib M. Kammoun - Department Head</li>
-                                <li>Industry Leaders from Partner Companies</li>
-                                <li>IEEE FSS Student Branch Representatives</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item">
-                    <div class="schedule-time">
-                        <span class="time">9:45 - 10:15</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Networking Break</h3>
-                        <p>Coffee break and initial networking opportunities</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-coffee"></i> Refreshment Area</span>
-                            <span class="detail-item"><i class="fas fa-users"></i> Open Networking</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item featured">
-                    <div class="schedule-time">
-                        <span class="time">10:15 - 11:45</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Technical Workshops & Sessions</h3>
-                        <p>Multiple parallel technical workshops covering cutting-edge technologies and industry practices</p>
-                        <div class="workshop-tracks">
-                            <div class="track">
-                                <h4><i class="fas fa-robot"></i> AI & Machine Learning Track</h4>
-                                <ul>
-                                    <li>Introduction to Deep Learning</li>
-                                    <li>Computer Vision Applications</li>
-                                    <li>Natural Language Processing</li>
-                                </ul>
-                            </div>
-                            <div class="track">
-                                <h4><i class="fas fa-code"></i> Software Development Track</h4>
-                                <ul>
-                                    <li>Modern Web Development</li>
-                                    <li>Mobile App Development</li>
-                                    <li>DevOps and Cloud Computing</li>
-                                </ul>
-                            </div>
-                            <div class="track">
-                                <h4><i class="fas fa-shield-alt"></i> Cybersecurity Track</h4>
-                                <ul>
-                                    <li>Ethical Hacking Fundamentals</li>
-                                    <li>Network Security</li>
-                                    <li>Security Best Practices</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item">
-                    <div class="schedule-time">
-                        <span class="time">11:45 - 12:15</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Panel Discussion</h3>
-                        <p>"Future of Technology in Tunisia" - Industry experts discuss trends and opportunities</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-comments"></i> Interactive Q&A</span>
-                            <span class="detail-item"><i class="fas fa-industry"></i> Industry Insights</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item">
-                    <div class="schedule-time">
-                        <span class="time">12:15 - 13:15</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Lunch Break</h3>
-                        <p>Networking lunch with catered meals and continued conversations</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-utensils"></i> Catered Lunch</span>
-                            <span class="detail-item"><i class="fas fa-handshake"></i> Informal Networking</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item">
-                    <div class="schedule-time">
-                        <span class="time">13:15 - 13:45</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Student Clubs Presentations</h3>
-                        <p>IEEE FSS, CPC FSS, and GDG on Campus showcase their activities and achievements</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-university"></i> Student Organizations</span>
-                            <span class="detail-item"><i class="fas fa-trophy"></i> Achievements Showcase</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item featured">
-                    <div class="schedule-time">
-                        <span class="time">13:45 - 15:45</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Booth Opening & Round Tables</h3>
-                        <p>Company booths open for recruitment, internship opportunities, and career guidance</p>
-                        <div class="booth-features">
-                            <div class="feature-grid">
-                                <div class="feature-item">
-                                    <i class="fas fa-briefcase"></i>
-                                    <h4>Job Opportunities</h4>
-                                </div>
-                                <div class="feature-item">
-                                    <i class="fas fa-graduation-cap"></i>
-                                    <h4>Internships</h4>
-                                </div>
-                                <div class="feature-item">
-                                    <i class="fas fa-lightbulb"></i>
-                                    <h4>PFE Projects</h4>
-                                </div>
-                                <div class="feature-item">
-                                    <i class="fas fa-users"></i>
-                                    <h4>Mentorship</h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item">
-                    <div class="schedule-time">
-                        <span class="time">15:45 - 16:30</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Partner Workshop</h3>
-                        <p>Special technical session hosted by our premium partners</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-handshake"></i> Partner Companies</span>
-                            <span class="detail-item"><i class="fas fa-tools"></i> Hands-on Session</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="schedule-item featured">
-                    <div class="schedule-time">
-                        <span class="time">16:30 - 17:00</span>
-                    </div>
-                    <div class="schedule-content">
-                        <h3>Closing Ceremony</h3>
-                        <p>Event wrap-up, thank you messages, and announcement of future events</p>
-                        <div class="schedule-details">
-                            <span class="detail-item"><i class="fas fa-trophy"></i> Awards & Recognition</span>
-                            <span class="detail-item"><i class="fas fa-camera"></i> Group Photos</span>
-                            <span class="detail-item"><i class="fas fa-calendar-plus"></i> Future Events</span>
-                        </div>
-                    </div>
-                </div>
+            <!-- Schedule will be loaded from JSON -->
+            <div class="schedule-timeline schedule-list">
+                <!-- Schedule items will be loaded here by JavaScript -->
             </div>
         </div>
     </section>
@@ -283,89 +98,7 @@
             </div>
             
             <div class="workshops-grid">
-                <div class="workshop-card">
-                    <div class="workshop-icon">
-                        <i class="fas fa-brain"></i>
-                    </div>
-                    <h3>AI & Machine Learning</h3>
-                    <p class="workshop-time">10:15 - 11:45 AM</p>
-                    <p>Explore the fundamentals of artificial intelligence and machine learning with hands-on examples and real-world applications.</p>
-                    <div class="workshop-info">
-                        <span><i class="fas fa-user"></i> Expert Instructors</span>
-                        <span><i class="fas fa-laptop"></i> Hands-on Coding</span>
-                        <span><i class="fas fa-certificate"></i> Certificates</span>
-                    </div>
-                </div>
-
-                <div class="workshop-card">
-                    <div class="workshop-icon">
-                        <i class="fas fa-mobile-alt"></i>
-                    </div>
-                    <h3>Mobile Development</h3>
-                    <p class="workshop-time">10:15 - 11:45 AM</p>
-                    <p>Learn modern mobile app development using React Native and Flutter, from basics to deployment.</p>
-                    <div class="workshop-info">
-                        <span><i class="fas fa-code"></i> Live Coding</span>
-                        <span><i class="fas fa-mobile"></i> Cross-platform</span>
-                        <span><i class="fas fa-rocket"></i> Deploy Apps</span>
-                    </div>
-                </div>
-
-                <div class="workshop-card">
-                    <div class="workshop-icon">
-                        <i class="fas fa-cloud"></i>
-                    </div>
-                    <h3>Cloud Computing</h3>
-                    <p class="workshop-time">10:15 - 11:45 AM</p>
-                    <p>Discover cloud platforms, containerization with Docker, and scalable application deployment.</p>
-                    <div class="workshop-info">
-                        <span><i class="fas fa-server"></i> AWS/Azure</span>
-                        <span><i class="fas fa-docker"></i> Docker</span>
-                        <span><i class="fas fa-expand-arrows-alt"></i> Scalability</span>
-                    </div>
-                </div>
-
-                <div class="workshop-card">
-                    <div class="workshop-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <h3>Cybersecurity</h3>
-                    <p class="workshop-time">10:15 - 11:45 AM</p>
-                    <p>Learn ethical hacking techniques, security assessment tools, and best practices for secure development.</p>
-                    <div class="workshop-info">
-                        <span><i class="fas fa-bug"></i> Penetration Testing</span>
-                        <span><i class="fas fa-lock"></i> Security Tools</span>
-                        <span><i class="fas fa-shield"></i> Defense</span>
-                    </div>
-                </div>
-
-                <div class="workshop-card">
-                    <div class="workshop-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <h3>Data Science</h3>
-                    <p class="workshop-time">15:45 - 16:30 PM</p>
-                    <p>Analyze big data, create visualizations, and build predictive models using Python and R.</p>
-                    <div class="workshop-info">
-                        <span><i class="fas fa-python"></i> Python/R</span>
-                        <span><i class="fas fa-chart-bar"></i> Visualization</span>
-                        <span><i class="fas fa-database"></i> Big Data</span>
-                    </div>
-                </div>
-
-                <div class="workshop-card">
-                    <div class="workshop-icon">
-                        <i class="fas fa-user-tie"></i>
-                    </div>
-                    <h3>Professional Skills</h3>
-                    <p class="workshop-time">15:45 - 16:30 PM</p>
-                    <p>Enhance your resume, prepare for interviews, and develop essential soft skills for career success.</p>
-                    <div class="workshop-info">
-                        <span><i class="fas fa-file-alt"></i> Resume Tips</span>
-                        <span><i class="fas fa-comments"></i> Interview Prep</span>
-                        <span><i class="fas fa-handshake"></i> Networking</span>
-                    </div>
-                </div>
+                <!-- Workshop cards will be loaded from JSON -->
             </div>
         </div>
     </section>
