fix scroll reveal

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,10 +36,9 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <div class="header-content">
-                <h1>About MyPFE 14.0</h1>
-                <p>Discover the story behind Tunisia's leading job fair and career development event</p>
-                <!-- breadcrumb removed -->
+            <div class="header-content scroll-reveal">
+                <h1 class="text-reveal">About MyPFE 14.0</h1>
+                <p class="text-reveal">Discover the story behind Tunisia's leading job fair and career development event</p>
             </div>
         </div>
     </section>
@@ -50,27 +49,27 @@
     <section class="event-overview">
         <div class="container">
             <div class="overview-content">
-                <div class="overview-text">
-                    <h2>What is MyPFE?</h2>
-                    <p>
+                <div class="overview-text scroll-reveal-left">
+                    <h2 class="text-reveal">What is MyPFE?</h2>
+                    <p class="text-reveal">
                         Make Your Professional Future Efficient 14.0 is the leading job fair of the 
                         Faculty of Sciences of Sfax, organized by the Computer Science and Communications 
                         Department in partnership with IEEE FSS Student Branch, CPC FSS, and GDG on Campus.
                     </p>
-                    <p>
+                    <p class="text-reveal">
                         Over the years, it has become a trusted meeting point between students, industry 
                         leaders, and top organizations. This edition brings together company booths 
                         showcasing career opportunities, internships, and innovative projects tailored 
                         to students' ambitions.
                     </p>
-                    <p>
+                    <p class="text-reveal">
                         Beyond recruitment, MyPFE offers expert-led workshops on the latest technologies, 
                         tools, and industry practices where students gain practical career guidance while 
                         sharpening their technical and soft skills—resume building, interviews, and communication.
                     </p>
                 </div>
-                <div class="overview-stats">
-                    <div class="stat-card">
+                <div class="overview-stats scroll-reveal-right">
+                    <div class="stat-card scroll-reveal">
                         <div class="stat-icon">
                             <i class="fas fa-trophy"></i>
                         </div>
@@ -79,7 +78,7 @@
                             <div class="stat-label">Edition</div>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card scroll-reveal">
                         <div class="stat-icon">
                             <i class="fas fa-users"></i>
                         </div>
@@ -88,7 +87,7 @@
                             <div class="stat-label">Students</div>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card scroll-reveal">
                         <div class="stat-icon">
                             <i class="fas fa-building"></i>
                         </div>
@@ -97,7 +96,7 @@
                             <div class="stat-label">Companies</div>
                         </div>
                     </div>
-                    <div class="stat-card">
+                    <div class="stat-card scroll-reveal">
                         <div class="stat-icon">
                             <i class="fas fa-chalkboard-teacher"></i>
                         </div>
@@ -114,13 +113,13 @@
     <!-- Organizers Section -->
     <section class="organizers-detailed">
         <div class="container">
-            <div class="section-header">
-                <h2>Who Are We?</h2>
-                <p>A collaboration of leading academic and professional organizations</p>
+            <div class="section-header scroll-reveal">
+                <h2 class="text-reveal">Who Are We?</h2>
+                <p class="text-reveal">A collaboration of leading academic and professional organizations</p>
             </div>
 
             <!-- Faculty of Sciences -->
-            <div class="organizer-block">
+            <div class="organizer-block scroll-reveal-left">
                 <div class="organizer-content">
                     <div class="organizer-info">
                         <img src="../assets/images/logos/fss-logo.png" alt="Faculty of Sciences of Sfax" class="organizer-logo">
@@ -149,7 +148,7 @@
             </div>
 
             <!-- IEEE FSS -->
-            <div class="organizer-block">
+            <div class="organizer-block scroll-reveal-right">
                 <div class="organizer-content reverse">
                     <div class="organizer-info">
                         <img src="../assets/images/logos/ieee-fss.png" alt="IEEE FSS Student Branch" class="organizer-logo">
@@ -181,7 +180,7 @@
             </div>
 
             <!-- CPC FSS -->
-            <div class="organizer-block">
+            <div class="organizer-block scroll-reveal-left">
                 <div class="organizer-content">
                     <div class="organizer-info">
                         <img src="../assets/images/logos/cpc-fss.png" alt="Competitive Programming Club" class="organizer-logo">
@@ -205,7 +204,7 @@
             </div>
 
             <!-- GDG on Campus -->
-            <div class="organizer-block">
+            <div class="organizer-block scroll-reveal-right">
                 <div class="organizer-content reverse">
                     <div class="organizer-info">
                         <img src="../assets/images/logos/gdg-campus.png" alt="GDG on Campus FSS" class="organizer-logo">
@@ -235,29 +234,29 @@
     <section class="mission">
         <div class="container">
             <div class="mission-content">
-                <div class="mission-text">
-                    <h2>Our Mission</h2>
-                    <p>
+                <div class="mission-text scroll-reveal-left">
+                    <h2 class="text-reveal">Our Mission</h2>
+                    <p class="text-reveal">
                         MyPFE serves as a crucial bridge between academic excellence and professional success. 
                         We are dedicated to creating meaningful connections between talented students and 
                         industry leaders, fostering an environment where innovation meets opportunity.
                     </p>
                     <div class="mission-points">
-                        <div class="mission-point">
+                        <div class="mission-point scroll-reveal">
                             <i class="fas fa-graduation-cap"></i>
                             <div>
                                 <h4>Student Empowerment</h4>
                                 <p>Equipping students with skills, knowledge, and connections for career success</p>
                             </div>
                         </div>
-                        <div class="mission-point">
+                        <div class="mission-point scroll-reveal">
                             <i class="fas fa-handshake"></i>
                             <div>
                                 <h4>Industry Partnership</h4>
                                 <p>Creating valuable partnerships between academia and industry leaders</p>
                             </div>
                         </div>
-                        <div class="mission-point">
+                        <div class="mission-point scroll-reveal">
                             <i class="fas fa-rocket"></i>
                             <div>
                                 <h4>Innovation Hub</h4>
@@ -266,7 +265,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="mission-image">
+                <div class="mission-image scroll-reveal-right">
                     <img src="../assets/images/mission-illustration.svg" alt="Our Mission">
                 </div>
             </div>
@@ -276,26 +275,26 @@
     <!-- Event History -->
     <section class="event-history">
         <div class="container">
-            <div class="section-header">
-                <h2>MyPFE Through the Years</h2>
-                <p>A journey of growth, innovation, and success</p>
+            <div class="section-header scroll-reveal">
+                <h2 class="text-reveal">MyPFE Through the Years</h2>
+                <p class="text-reveal">A journey of growth, innovation, and success</p>
             </div>
             <div class="timeline">
-                <div class="timeline-item">
+                <div class="timeline-item scroll-reveal-left">
                     <div class="timeline-year">2025</div>
                     <div class="timeline-content">
                         <h4>MyPFE 14.0</h4>
                         <p>The biggest edition yet with enhanced digital integration and expanded international partnerships</p>
                     </div>
                 </div>
-                <div class="timeline-item">
+                <div class="timeline-item scroll-reveal-right">
                     <div class="timeline-year">2024</div>
                     <div class="timeline-content">
                         <h4>MyPFE 13.0</h4>
                         <p>Record-breaking attendance with 3000+ students and 45+ companies participating</p>
                     </div>
                 </div>
-                <div class="timeline-item">
+                <div class="timeline-item scroll-reveal-left">
                     <div class="timeline-year">2023</div>
                     <div class="timeline-content">
                         <h4>MyPFE 12.0</h4>
