--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -36,10 +36,9 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <div class="header-content">
-                <h1>Partnership Packages</h1>
-                <p>Join MyPFE 14.0 and connect with Tunisia's brightest tech talent</p>
-                <!-- breadcrumb removed -->
+            <div class="header-content scroll-reveal">
+                <h1 class="text-reveal">Partnership Packages</h1>
+                <p class="text-reveal">Join MyPFE 14.0 and connect with Tunisia's brightest tech talent</p>
             </div>
         </div>
     </section>
@@ -49,33 +48,33 @@
     <!-- Why Partner Section -->
     <section class="why-partner">
         <div class="container">
-            <div class="section-header">
-                <h2>Why Partner with MyPFE 14.0?</h2>
-                <p>Connect with over 350 talented students and shape the future of technology in Tunisia</p>
+            <div class="section-header scroll-reveal">
+                <h2 class="text-reveal">Why Partner with MyPFE 14.0?</h2>
+                <p class="text-reveal">Connect with over 350 talented students and shape the future of technology in Tunisia</p>
             </div>
             <div class="benefits-grid">
-                <div class="benefit-card">
+                <div class="benefit-card scroll-reveal">
                     <div class="benefit-icon">
                         <i class="fas fa-users"></i>
                     </div>
                     <h4>Access Top Talent</h4>
                     <p>Connect with 350+ computer science and engineering students ready to join your team</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card scroll-reveal">
                     <div class="benefit-icon">
                         <i class="fas fa-bullhorn"></i>
                     </div>
                     <h4>Brand Visibility</h4>
                     <p>Showcase your company to thousands of students, faculty, and industry professionals</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card scroll-reveal">
                     <div class="benefit-icon">
                         <i class="fas fa-handshake"></i>
                     </div>
                     <h4>Industry Networking</h4>
                     <p>Build relationships with academic institutions and other leading technology companies</p>
                 </div>
-                <div class="benefit-card">
+                <div class="benefit-card scroll-reveal">
                     <div class="benefit-icon">
                         <i class="fas fa-chart-line"></i>
                     </div>
@@ -91,9 +90,9 @@
     <!-- Former Partners -->
     <section class="former-partners">
         <div class="container">
-            <div class="section-header">
-                <h2>Our Trusted Partners</h2>
-                <p>Join leading companies that have partnered with MyPFE</p>
+            <div class="section-header scroll-reveal">
+                <h2 class="text-reveal">Our Trusted Partners</h2>
+                <p class="text-reveal">Join leading companies that have partnered with MyPFE</p>
             </div>
             <div class="partners-grid">
                 <!-- Partners will be loaded from JSON -->
@@ -105,29 +104,29 @@
     <section class="why-trust">
         <div class="container">
             <div class="trust-content">
-                <div class="trust-text">
-                    <h2>Why Trust Us?</h2>
-                    <p>
+                <div class="trust-text scroll-reveal-left">
+                    <h2 class="text-reveal">Why Trust Us?</h2>
+                    <p class="scroll-reveal">
                         We have a long experience in organizing professional events and have worked with many 
                         partners before, all of whom have been satisfied with our services. In addition, our team 
                         is highly qualified and has in-depth expertise in the planning and execution of high-caliber events.
                     </p>
                     <div class="trust-points">
-                        <div class="trust-point">
+                        <div class="trust-point scroll-reveal delay-1">
                             <i class="fas fa-award"></i>
                             <div>
                                 <h4>Proven Track Record</h4>
                                 <p>14 successful editions with consistent growth and partner satisfaction</p>
                             </div>
                         </div>
-                        <div class="trust-point">
+                        <div class="trust-point scroll-reveal delay-2">
                             <i class="fas fa-users-cog"></i>
                             <div>
                                 <h4>Professional Team</h4>
                                 <p>Experienced organizers with expertise in event planning and execution</p>
                             </div>
                         </div>
-                        <div class="trust-point">
+                        <div class="trust-point scroll-reveal delay-3">
                             <i class="fas fa-flexible"></i>
                             <div>
                                 <h4>Flexible Approach</h4>
@@ -136,16 +135,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="trust-stats">
-                    <div class="trust-stat">
+                <div class="trust-stats scroll-reveal-right">
+                    <div class="trust-stat scroll-reveal delay-1">
                         <div class="stat-number">14</div>
                         <div class="stat-label">Successful Editions</div>
                     </div>
-                    <div class="trust-stat">
+                    <div class="trust-stat scroll-reveal delay-2">
                         <div class="stat-number">100+</div>
                         <div class="stat-label">Partner Companies</div>
                     </div>
-                    <div class="trust-stat">
+                    <div class="trust-stat scroll-reveal delay-3">
                         <div class="stat-number">98%</div>
                         <div class="stat-label">Partner Satisfaction</div>
                     </div>
@@ -157,14 +156,14 @@
     <!-- Contact Form -->
     <section class="partner-contact" id="contact">
         <div class="container">
-            <div class="section-header">
-                <h2>Become a Partner</h2>
-                <p>Ready to connect with Tunisia's brightest tech talent? Get in touch with us today.</p>
+            <div class="section-header scroll-reveal">
+                <h2 class="text-reveal">Become a Partner</h2>
+                <p class="text-reveal">Ready to connect with Tunisia's brightest tech talent? Get in touch with us today.</p>
             </div>
             <div class="contact-grid">
-                <div class="contact-info">
+                <div class="contact-info scroll-reveal-left">
                     <h3>Contact Information</h3>
-                    <div class="contact-item">
+                    <div class="contact-item scroll-reveal">
                         <i class="fas fa-user"></i>
                         <div>
                             <h4>Habib M. Kammoun</h4>
@@ -172,7 +171,7 @@
                             <p>habib.kammoun@ieee.org</p>
                         </div>
                     </div>
-                    <div class="contact-item">
+                    <div class="contact-item scroll-reveal">
                         <i class="fas fa-user"></i>
                         <div>
                             <h4>Med Yassine Abid</h4>
@@ -181,7 +180,7 @@
                             <p>+216 28 592 003</p>
                         </div>
                     </div>
-                    <div class="contact-item">
+                    <div class="contact-item scroll-reveal">
                         <i class="fas fa-user"></i>
                         <div>
                             <h4>Emna Mnejja</h4>
@@ -192,7 +191,7 @@
                     </div>
                     
                 </div>
-                <div class="contact-form">
+                <div class="contact-form scroll-reveal-right">
                     <form class="partnership-form">
                         <div class="form-group">
                             <label for="company">Company Name *</label>
