--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,7 +58,7 @@
                     <div class="card-header">
                         <i class="fas fa-graduation-cap"></i>
                         <h3>Student Registration</h3>
-                        <p class="price">FREE</p>
+                       
                     </div>
                     <div class="card-content">
                         <ul class="benefits-list">
@@ -77,7 +77,7 @@
                     <div class="card-header">
                         <i class="fas fa-building"></i>
                         <h3>Company Participation</h3>
-                        <p class="price">Starting from 1000 TND</p>
+                        
                     </div>
                     <div class="card-content">
                         <ul class="benefits-list">
@@ -263,7 +263,7 @@
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="contact-details">
-                        <h3>Med Yassine Abid</h3>
+                        <h3>Mohamed Yassine Abid</h3>
                         <p class="position">Event Chair</p>
                         <div class="contact-methods">
                             <a href="mailto:abid.mohamed.yassine@ieee.org" class="contact-method">
@@ -283,16 +283,16 @@
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="contact-details">
-                        <h3>Emna Mnejja</h3>
-                        <p class="position">Logistics Manager</p>
+                        <h3>Mohamed Ali Djemal</h3>
+                        <p class="position">Treasurer</p>
                         <div class="contact-methods">
-                            <a href="mailto:emnamnejja1808@mail.com" class="contact-method">
+                            <a href="mailto:mohamed.ali.djemal@ieee.org" class="contact-method">
                                 <i class="fas fa-envelope"></i>
-                                emnamnejja1808@mail.com
+                                mohamed.ali.djemal@ieee.org
                             </a>
-                            <a href="tel:+21699332442" class="contact-method">
+                            <a href="tel:+21627764509" class="contact-method">
                                 <i class="fas fa-phone"></i>
-                                +216 99 332 442
+                                +216 27 764 509
                             </a>
                         </div>
                     </div>
