--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -183,10 +183,10 @@
                     <div class="contact-item scroll-reveal">
                         <i class="fas fa-user"></i>
                         <div>
-                            <h4>Emna Mnejja</h4>
-                            <p>Logistics Manager</p>
-                            <p>emnamnejja1808@mail.com</p>
-                            <p>+216 99 332 442</p>
+                            <h4>Mohamed Ali Djemal</h4>
+                            <p>Treasurer</p>
+                            <p>mohamed.ali.djemal@ieee.org</p>
+                            <p>+216 27 764 509</p>
                         </div>
                     </div>
                     
@@ -209,17 +209,7 @@
                             <label for="phone">Phone Number</label>
                             <input type="tel" id="phone" name="phone">
                         </div>
-                        <div class="form-group">
-                            <label for="package">Preferred Package</label>
-                            <select id="package" name="package">
-                                <option value="">Select a package</option>
-                                <option value="bronze">Bronze - 1000 TND</option>
-                                <option value="silver">Silver - 2000 TND</option>
-                                <option value="gold">Gold - 3500 TND</option>
-                                <option value="diamond">Diamond - 5000 TND</option>
-                                <option value="custom">Custom Package</option>
-                            </select>
-                        </div>
+                        
                         <div class="form-group">
                             <label for="message">Message</label>
                             <textarea id="message" name="message" rows="4" placeholder="Tell us about your company and partnership goals..."></textarea>
