--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -176,7 +176,7 @@
                         <div>
                             <h4>Med Yassine Abid</h4>
                             <p>Event Chair</p>
-                            <p>abid.mohamed.yassine@ieee.org</p>
+                            <p>mypfe@fss.usf.tn</p>
                             <p>+216 28 592 003</p>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-envelope"></i> abid.mohamed.yassine@ieee.org</p>
+                    <p><i class="fas fa-envelope"></i> mypfe@fss.usf.tn</p>
                     <p><i class="fas fa-phone"></i> +216 28 592 003</p>
                     <p><i class="fas fa-map-marker-alt"></i> Faculty of Sciences of Sfax</p>
                 </div>
