--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPFE 14.0 - Make Your Professional Future Efficient</title>
-    <meta name="description" content="Join MyPFE 14.0 - A leading job fair at Faculty of Sciences of Sfax. November 17th, 2025. Connect with industry leaders, explore opportunities, and shape your professional future.">
+    <meta name="description" content="Join MyPFE 14.0 - A leading job fair at Faculty of Sciences of Sfax. November 16th, 2025. Connect with industry leaders, explore opportunities, and shape your professional future.">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
                 <div class="hero-info scroll-reveal">
                     <div class="info-item">
                         <i class="fas fa-calendar"></i>
-                        <span>November 17, 2025</span>
+                        <span>November 16, 2025</span>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
@@ -189,17 +189,23 @@
             </div>
             <div class="organizers-grid">
                 <div class="organizer scroll-reveal">
-                    <img src="assets/images/logos/ieee-fss.png" alt="IEEE FSS Student Branch">
+                    <div class="logo-container">
+                        <img src="assets/images/logos/ieee-fss.png" alt="IEEE FSS Student Branch">
+                    </div>
                     <h4>IEEE FSS Student Branch</h4>
                     <p>A vibrant community with 250+ members fostering innovation and entrepreneurship</p>
                 </div>
                 <div class="organizer scroll-reveal">
-                    <img src="assets/images/logos/cpc-fss.png" alt="CPC FSS">
+                    <div class="logo-container cpc-logo">
+                        <img src="assets/images/logos/cpc-fss.png" alt="CPC FSS">
+                    </div>
                     <h4>Competitive Programming Club</h4>
                     <p>Cultivating algorithmic excellence and competitive programming culture since 2022</p>
                 </div>
                 <div class="organizer scroll-reveal">
-                    <img src="assets/images/logos/gdg-campus.png" alt="GDG on Campus FSS">
+                    <div class="logo-container">
+                        <img src="assets/images/logos/gdg-campus.png" alt="GDG on Campus FSS">
+                    </div>
                     <h4>GDG on Campus FSS</h4>
                     <p>University-based community for students interested in Google development technologies</p>
                 </div>
@@ -243,7 +249,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-envelope"></i> abid.mohamed.yassine@ieee.org</p>
+                    <p><i class="fas fa-envelope"></i> mypfe@fss.usf.tn</p>
                     <p><i class="fas fa-phone"></i> +216 28 592 003</p>
                     <p><i class="fas fa-map-marker-alt"></i> Faculty of Sciences of Sfax</p>
                 </div>
@@ -264,7 +270,7 @@
     <script src="assets/js/main.js"></script>
     <script>
         // Countdown Timer
-        const eventDate = new Date('November 17, 2025 09:00:00').getTime();
+        const eventDate = new Date('November 16, 2025 09:00:00').getTime();
         
         function updateCountdown() {
             const now = new Date().getTime();
