--- a/pages/about.html
+++ b/pages/about.html
@@ -392,7 +392,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-envelope"></i> abid.mohamed.yassine@ieee.org</p>
+                    <p><i class="fas fa-envelope"></i> mypfe@fss.usf.tn</p>
                     <p><i class="fas fa-phone"></i> +216 28 592 003</p>
                     <p><i class="fas fa-map-marker-alt"></i> Faculty of Sciences of Sfax</p>
                 </div>
