--- a/pages/contact.html
+++ b/pages/contact.html
@@ -266,9 +266,9 @@
                         <h3>Mohamed Yassine Abid</h3>
                         <p class="position">Event Chair</p>
                         <div class="contact-methods">
-                            <a href="mailto:abid.mohamed.yassine@ieee.org" class="contact-method">
+                            <a href="mailto:mypfe@fss.usf.tn" class="contact-method">
                                 <i class="fas fa-envelope"></i>
-                                abid.mohamed.yassine@ieee.org
+                                mypfe@fss.usf.tn
                             </a>
                             <a href="tel:+21628592003" class="contact-method">
                                 <i class="fas fa-phone"></i>
@@ -486,7 +486,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-envelope"></i> abid.mohamed.yassine@ieee.org</p>
+                    <p><i class="fas fa-envelope"></i> mypfe@fss.usf.tn</p>
                     <p><i class="fas fa-phone"></i> +216 28 592 003</p>
                     <p><i class="fas fa-map-marker-alt"></i> Faculty of Sciences of Sfax</p>
                 </div>
