--- a/pages/program.html
+++ b/pages/program.html
@@ -52,7 +52,7 @@
             <div class="info-cards">
                 <div class="info-card scroll-reveal">
                     <i class="fas fa-calendar-alt"></i>
-                    <h3>November 17, 2025</h3>
+                    <h3>November 16, 2025</h3>
                     <p>Monday</p>
                 </div>
                 <div class="info-card scroll-reveal">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-envelope"></i> abid.mohamed.yassine@ieee.org</p>
+                    <p><i class="fas fa-envelope"></i> mypfe@fss.usf.tn</p>
                     <p><i class="fas fa-phone"></i> +216 28 592 003</p>
                     <p><i class="fas fa-map-marker-alt"></i> Faculty of Sciences of Sfax</p>
                 </div>
