--- a/pages/about.html
+++ b/pages/about.html
@@ -122,7 +122,7 @@
             <div class="organizer-block scroll-reveal-left">
                 <div class="organizer-content">
                     <div class="organizer-info">
-                        <img src="../assets/images/logos/fss-logo.png" alt="Faculty of Sciences of Sfax" class="organizer-logo">
+                        <img src="../assets/images/logos/fss-logo.jpg" alt="Faculty of Sciences of Sfax" class="organizer-logo">
                         <div class="organizer-details">
                             <h3>Faculty of Sciences of Sfax</h3>
                             <p class="organizer-subtitle">Founded in 1987</p>
@@ -134,7 +134,7 @@
                             </p>
                             <div class="organizer-stats">
                                 <div class="mini-stat">
-                                    <span class="number">350+</span>
+                                    <span class="number">3000+</span>
                                     <span class="label">Students</span>
                                 </div>
                                 <div class="mini-stat">
@@ -151,7 +151,7 @@
             <div class="organizer-block scroll-reveal-right">
                 <div class="organizer-content reverse">
                     <div class="organizer-info">
-                        <img src="../assets/images/logos/ieee-fss.png" alt="IEEE FSS Student Branch" class="organizer-logo">
+                        <img src="../assets/images/logos/ieee-blue-2.png" alt="IEEE FSS Student Branch" class="organizer-logo">
                         <div class="organizer-details">
                             <h3>IEEE FSS Student Branch</h3>
                             <p class="organizer-subtitle">Founded in 2018</p>
