--- a/index.html
+++ b/index.html
@@ -137,27 +137,35 @@
                         leaders, and top organizations, offering career opportunities, internships, and 
                         innovative projects tailored to students' ambitions.
                     </p>
+                </div>
+                <div class="features-container scroll-reveal-right">
                     <div class="features">
                         <div class="feature scroll-reveal">
                             <i class="fas fa-briefcase"></i>
-                            <h4>Career Opportunities</h4>
-                            <p>Connect with leading companies and explore exciting career paths</p>
+                            <div class="feature-content">
+                                <h4>Career Opportunities</h4>
+                                <p>Connect with leading companies and explore exciting career paths</p>
+                            </div>
                         </div>
                         <div class="feature scroll-reveal">
                             <i class="fas fa-users"></i>
-                            <h4>Networking</h4>
-                            <p>Build meaningful connections with professionals and peers</p>
+                            <div class="feature-content">
+                                <h4>Networking</h4>
+                                <p>Build meaningful connections with professionals and peers</p>
+                            </div>
                         </div>
                         <div class="feature scroll-reveal">
                             <i class="fas fa-graduation-cap"></i>
-                            <h4>Skill Development</h4>
-                            <p>Attend workshops and sessions to enhance your technical skills</p>
+                            <div class="feature-content">
+                                <h4>Skill Development</h4>
+                                <p>Attend workshops and sessions to enhance your technical skills</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="about-image scroll-reveal-right">
+                <!-- <div class="about-image scroll-reveal-right">
                     <img src="assets/images/about-mypfe.jpg" alt="MyPFE Event">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
